src/main/kotlin/com/example/auth/global/error/CustomError.kt
package com.example.auth.global.error

interface CustomError{
    val message: String
    val status: Int
}